--- a/MyShop/Properties/launchSettings.json
+++ b/MyShop/Properties/launchSettings.json
@@ -23,8 +23,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:7108;http://localhost:5095",
+      "launchUrl": "../html/LogIn.html",
+      "applicationUrl": "https://localhost:44379;http://localhost:5095",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
