--- a/MyShop/MyShop.csproj
+++ b/MyShop/MyShop.csproj
@@ -29,7 +29,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="zxcvbn-core" Version="8.0.0-beta0002" />
+    <PackageReference Include="zxcvbn-core" Version="7.0.92" />
   </ItemGroup> 
 
   <ItemGroup>
