--- a/MyShop/appsettings.json
+++ b/MyShop/appsettings.json
@@ -10,5 +10,8 @@
     "Key": "A7!d9$kLmN2@xPzQwR4#sT6^uV8&yZ0*BfGhJqLwXzC1!e3@r5^t7&v9*YbDg",
     "Issuer": "MyShopServer",
     "Audience": "MyShopClient"
+  },
+  "ConnectionStrings": {
+    "Redis": "localhost:6379"
   }
 }
